Quartus_Sim-Em/hello_world/bin/hello_world.10507.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl" -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=211 -Xclang -ivfsoverlay-lib/home/joerock/intelFPGA_pro/21.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device"
Setting target instruction set architecture to: Default (Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:29:5: error: use of undeclared identifier 'FILE'
    FILE * fp;
    ^
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:29:12: error: use of undeclared identifier 'fp'
    FILE * fp;
           ^
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:31:4: error: use of undeclared identifier 'fp'
   fp = fopen ("test.txt", "w+");
   ^
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:31:9: error: implicit declaration of function 'fopen' is invalid in OpenCL
   fp = fopen ("test.txt", "w+");
        ^
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:32:4: error: implicit declaration of function 'fprintf' is invalid in OpenCL
   fprintf(fp, "Thread #%u: Hello from the Intel FPGA OpenCL Compiler!\n", thread_id);
   ^
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:32:4: note: did you mean 'printf'?
opencl-c-platform.h:1003:5: note: 'printf' declared here
int printf(__constant const char* st, ...) __attribute__((format(printf, 1, 2)));
    ^
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:32:12: error: use of undeclared identifier 'fp'
   fprintf(fp, "Thread #%u: Hello from the Intel FPGA OpenCL Compiler!\n", thread_id);
           ^
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:33:4: error: implicit declaration of function 'fclose' is invalid in OpenCL
   fclose(fp);
   ^
/home/joerock/Documents/TFM/Quartus_Sim-Em/hello_world/device/hello_world.cl:33:11: error: use of undeclared identifier 'fp'
   fclose(fp);
          ^
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
